# XEngine

./: .gitignore  .travis.yml  LICENSE  README.md
source/: CMakeLists.txt  XEngine.h
source/Base/: CMakeLists.txt  XConfig.h  XLogger.cpp  XLogger.h  XPath.cpp  XPath.h  XPlatform.h  XPlatform_MAC.mm  XPlatform_WIN.cpp  XPreDef.h  XRefObject.h  XSmartPointer.h  XStringUtil.cpp  XStringUtil.h  XTypes.h  XUtils.h  XVersion.h
source/IO/: CMakeLists.txt  XArchive.h  XArchiveJson.cpp  XArchiveJson.h  XArchiveXML.cpp  XArchiveXML.h  XDataStream.cpp  XDataStream.h  XFileDataStream.cpp  XFileDataStream.h  XMemDataStream.cpp  XMemDataStream.h  XSerializer.h  XXMLSerializer.cpp
source/Math/: CMakeLists.txt  XMath.cpp  XMath.h
source/Reflection/: CMakeLists.txt  XMetaClass.cpp  XMetaClass.h  XMetaClassTranslator.h  XMetaEnum.cpp  XMetaEnum.h  XMetaField.cpp  XMetaField.h  XMetaMethod.cpp  XMetaMethod.h  XMetaObject.h  XMetaObjectSerializer.cpp  XMetaObjectSerializer.h  XMetaPointerTranslator.h  XMetaPrimitiveTranslator.h  XMetaSTLTranslator.h  XMetaScalarTranslator.h  XMetaSystem.cpp  XMetaSystem.h  XMetaTranslator.h  XMetaType.h  XMetaVariant.h  scriptBinder.h
