CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( XEngine )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )

SET ( ALL_FILES XEngine.h )

SOURCE_GROUP( "" FILES
    XEngine.h
)

INCLUDE( Base/CMakeLists.txt )
INCLUDE( Reflection/CMakeLists.txt )
INCLUDE( IO/CMakeLists.txt )
INCLUDE( Math/CMakeLists.txt )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/ThirdParty )

IF ( APPLE )
	MESSAGE( "Setting up Xcode for C++11 with libc++." )
	SET( CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++0x" )
	SET( CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++" )
ENDIF()


ADD_LIBRARY( XEngine SHARED ${ALL_FILES} )

ADD_LIBRARY( XEngine_Static STATIC ${ALL_FILES} )

SET_TARGET_PROPERTIES( XEngine PROPERTIES CLEAN_DIRECT_OUTPUT 1 )
SET_TARGET_PROPERTIES( XEngine_Static PROPERTIES OUTPUT_NAME "XEngine" )
SET_TARGET_PROPERTIES( XEngine_Static PROPERTIES CLEAN_DIRECT_OUTPUT 1 )